Planificar migración catálogos a DDB
